--- a/cart.html
+++ b/cart.html
@@ -20,12 +20,9 @@
   </div>
 </header>
 
-<!-- Cart Content -->
 <main class="container mx-auto px-4 py-6">
   <h1 class="text-2xl font-bold mb-4 text-gray-700">Your Cart</h1>
-  <div id="cart-items" class="space-y-4">
-    <!-- Items will populate here -->
-  </div>
+  <div id="cart-items" class="space-y-4"></div>
 
   <div class="mt-6 flex justify-between items-center">
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
@@ -34,15 +31,14 @@
 </main>
 
 <script>
-// Populate cart from localStorage
+// Load cart from localStorage
 function renderCartItems() {
   const container = document.getElementById("cart-items");
-  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
   container.innerHTML = '';
-
   let total = 0;
 
-  cart.forEach(item => {
+  cart.forEach((item, index) => {
     const itemTotal = (item.price * item.quantity).toFixed(2);
     total += parseFloat(itemTotal);
 
@@ -52,18 +48,50 @@ function renderCartItems() {
       <img src="${item.image}" alt="${item.name}" class="w-16 h-16 object-contain rounded">
       <div class="ml-4 flex-1">
         <div class="font-medium text-gray-700">${item.name}</div>
-        <div class="text-sm text-gray-500">Quantity: ${item.quantity}</div>
+        <div class="text-sm text-gray-500 flex items-center space-x-2 mt-1">
+          <button class="px-2 bg-gray-200 rounded" onclick="decreaseQuantity(${index})">−</button>
+          <span>${item.quantity}</span>
+          <button class="px-2 bg-gray-200 rounded" onclick="increaseQuantity(${index})">+</button>
+        </div>
       </div>
       <div class="font-bold text-gray-700">$${itemTotal}</div>
+      <button class="ml-2 text-red-500" onclick="removeItem(${index})">✕</button>
     `;
     container.appendChild(div);
   });
 
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
   document.getElementById("cart-count").textContent = cart.reduce((sum, i) => sum + i.quantity, 0);
+  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
-// Call on page load
+// Cart manipulation functions
+function increaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart[index].quantity++;
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+}
+
+function decreaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart[index].quantity > 1){
+    cart[index].quantity--;
+  } else {
+    cart.splice(index,1);
+  }
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+}
+
+function removeItem(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart.splice(index,1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+}
+
+// Initial render
 renderCartItems();
 </script>
 
